--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "start:dev": "npx nest start --watch",
     "start:debug": "npx nest start --debug --watch",
     "start:prod": "node dist/apps/gateway-admin/main.js",
-    "setup:local": "sh gen-ts.sh && nest build proto-schema && sh scripts/register.sh",
-    "setup:proto": "sh gen-ts.sh && nest build proto-schema",
+    "setup:local": "sh scripts/gen-ts.sh && nest build proto-schema && sh scripts/register.sh",
+    "setup:proto": "sh scripts/gen-ts.sh && nest build proto-schema",
     "setup:consul": "sh scripts/register.sh",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "lint-md": "remark .",
@@ -29,7 +29,7 @@
     "kompose": "kompose convert -o kubernetes/deployment.yaml",
     "docs": "npx compodoc --theme material --output docs -p tsconfig.json -s",
     "snyk-protect": "snyk protect",
-    "prepare": "yarn run snyk-protect"
+    ".prepare": "yarn run snyk-protect"
   },
   "dependencies": {
     "@anchan828/nest-sendgrid": "^0.3.16",
@@ -169,6 +169,7 @@
     "@types/passport-local": "^1.0.33",
     "@types/stripe": "^7.13.16",
     "@types/supertest": "^2.0.9",
+    "concurrently": "^5.3.0",
     "husky": "^4.2.5",
     "jest": "^26.2.2",
     "prettier": "^2.0.5",
@@ -234,7 +235,6 @@
       "remark-preset-lint-recommended"
     ]
   },
-  "snyk": true,
   "husky": {
     "hooks": {
       "pre-commit": "yarn format && yarn test && yarn test:e2e"
